--- a/Report/index.Rmd
+++ b/Report/index.Rmd
@@ -7,7 +7,7 @@ author:
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 documentclass: book
-bibliography: [book.bib]
+bibliography: bibliography.bib
 biblio-style: apalike
 link-citations: yes
 description: "Final project"
